--- a/www/search.html
+++ b/www/search.html
@@ -5,7 +5,8 @@ title: Search Logos
 {% include searchtab.html %}
 <div class="row clearfix" style="padding-bottom:20px;">
     <div class="col-md-6 col-md-offset-3 column">
-        <form action="get" class="form-inline" id="site_search">
+        <img src="/images/spinner.svg" style="height:64px" id="wait"/>
+        <form action="get" class="form-inline" id="site_search" style="display:none;">
             <div class="form-group">
                  <label class="sr-only" for="q">Search query</label><input autocomplete="off" autofocus="autofocus" class="form-control" id="q" name="q" placeholder="Search terms" type="text">
             </div>
@@ -48,6 +49,8 @@ $(function() {
 			window.idx.add($.extend({ "id": index }, value));
 		});
 		console.log("data loaded");
+        $("#wait").hide();
+        $("#site_search").show();
 	});
 
 	var doSearch = function(query)
@@ -65,8 +68,15 @@ $(function() {
 
 	$("#q").on('input propertychange paste', function() { 
 		console.log("input paste");
+		var previousQuery = getParameterByName("q");
 		var query = $("#q").val();
-		history.pushState({ "q": query}, "", "?q=" + query);
+		if (query && previousQuery && query.length > 0 && previousQuery.length > 0 && (query.startsWith(previousQuery) || previousQuery.startsWith(query))) {
+            history.replaceState({ "q": query}, "", "?q=" + query);
+        }
+        else {
+            history.pushState({"q": query}, "", "?q=" + query);
+        }
+        document.title = "Search logos for '" + query + "'";
 		doSearch(query);
 	});
 
