--- a/www/report/inventory.html
+++ b/www/report/inventory.html
@@ -30,8 +30,10 @@ redirect_from: /logos/inventory.html
 				<!-- / {% capture logofile %}{{ logopage.logohandle }}-{{imagetype.rastersuffix}}.png{% endcapture %}{% if logopage.images contains logofile %}{{ checkon }}{% assign count = count | minus:1 %}{% else %}{{ checkoff }}{% endif %}-->
 			</td>
 {%- endif %}{% endfor -%}
-			<td class="text-center">
-				{{ count }}
+            {%- capture logocard %}{{ logopage.logohandle }}{{ '-card.png' }}{% endcapture -%}
+            {%- if logopage.images contains logocard %}{% assign count = count | minus:1 %}{% endif -%}
+            <td class="text-center">
+				{% if count > 0 %}{{ count }}{% endif %}
 			</td>
 		</tr>
 {%- endif %}{% endfor -%}
