--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -16,7 +16,8 @@ redirect_from: /logos/missing.html
             <th>Name</th>
             <th>Icon</th>
             <th>Rectangle</th>
-            <th>Other</th>
+            <th style="text-align:center;">Other</th>
+            <th style="text-align:center;">Guidelines</th>
         </tr>
     </thead>
     <tbody>
@@ -35,6 +36,7 @@ redirect_from: /logos/missing.html
             <td>{% unless logopage.images contains logoicon %}MISSING{% endunless %}</td>
             <td>{% unless logopage.images contains logoar21 %}MISSING{% endunless %}</td>
             <td style="text-align:center;">{% if othercount > 0 %}{{othercount}}{% endif %}</td>
+            <td style="text-align:center;">{% if logopage.guide %}<a href="{{logopage.guide}}"><i class="fa fa-certificate icon-link"></i></a>{% endif %}</td>
         </tr>
         {% endif %}
     {% endif %}
