metadata & contribute guidelines

--- a/www/support/credits.html
+++ b/www/support/credits.html
@@ -3,7 +3,7 @@ layout: default
 title: Credits
 ---
 
-<p>These are the things that I used to make and run this website</p>
+<p>These are the things that I used to make and run VectorLogoZone</p>
 
 <p></p>
 
