--- a/www/support/index.html
+++ b/www/support/index.html
@@ -42,7 +42,8 @@ redirect_from:
 <div class="row">
     <div class="col-md-12">
         <h3>How reliable is the site?  Can I count on it to be up all the time?</h3>
-        <p>It is a static site, so it should be completely reliable.  You can check the <a href="https://nodeping.com/reports/checks/wbe44oj5-13fx-4h6l-8ojp-tlbno9b01gmu">recent uptime report</a> to see for yourself!</p>
+        <p>It is a static site, so it should be quite reliable.  You can check the <a href="https://nodeping.com/reports/checks/wbe44oj5-13fx-4h6l-8ojp-tlbno9b01gmu">recent uptime report</a> to see for yourself!</p>
+        <p>That said, there are no guarantees.  Feel free to host the images you use on your own servers.</p>
     </div>
 </div>
 
@@ -50,9 +51,6 @@ redirect_from:
     <div class="col-md-12">
         <h3>But I really want to support IE8!</h3>
         <p>I have seen several different ways: <a href="https://css-tricks.com/a-complete-guide-to-svg-fallbacks/">picture, image</a> and <a href="http://www.sitepoint.com/graceful-fallback-svgs-old-ie/">onerror</a>.</p>
-	<p>I implemented the <code>onerror</code> method on the <a href="/logos/index.html">logo list page</a>, but I am too lazy to get IE8 to test, so
-	   I have no idea if it works.  If it does, please <a href="contact.html">let me know</a>!
-	</p>
     </div>
 </div>
 
