index & credits tweaks

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,11 @@ redirect_from:
   - /util/index.html
 ---
 
-<p>I needed consistently sized logos for one of <a href="http://www.regexplanet.com/">my recent projects</a>.  While Google Image Search is really quite good, I still had a lot of trouble finding images that were:</p>
+<p>I needed consistently sized logos for some of
+    <a href="http://www.regexplanet.com/">my</a>
+    <a href="https://simpleshare.io/">recent</a>
+    <a href="https://www.heatmap.tv/support/credits.html">projects</a>.
+I wanted images that were:</p>
 
 <ul>
 	<li>svg format</li>
