--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -36,7 +36,7 @@ redirect_from: /logos/missing.html
             <td>{% unless logopage.images contains logoicon %}MISSING{% endunless %}</td>
             <td>{% unless logopage.images contains logoar21 %}MISSING{% endunless %}</td>
             <td style="text-align:center;">{% if othercount > 0 %}{{othercount}}{% endif %}</td>
-            <td style="text-align:center;">{% if logopage.guide %}<a href="{{logopage.guide}}"><i class="fa fa-certificate icon-link"></i></a>{% endif %}</td>
+            <td style="text-align:center;">{% if logopage.guide %}<a href="{{logopage.guide}}"><i class="fa fa-certificate"></i></a>{% endif %}</td>
         </tr>
         {% endif %}
     {% endif %}
