--- a/www/report/tags.html
+++ b/www/report/tags.html
@@ -15,18 +15,15 @@ title: Tag Report
     <tbody>
     {%- for logopage in sorted_pages -%}
     {%- if logopage.logohandle -%}
-    {%- capture logoar21 %}{{ logopage.logohandle }}{{ '-ar21.svg' }}{% endcapture -%}
-    {%- capture logoicon %}{{ logopage.logohandle }}{{ '-icon.svg' }}{% endcapture -%}
-    {%- if logopage.tags -%}
-    {%- else %}{% assign notagcount = notagcount | plus:1 -%}
-{% endif -%}
+        {%- if logopage.tags -%}{%- else %}{% assign notagcount = notagcount | plus:1 -%}
+    {%- endif %}
     <tr>
         <td><a href="{{logopage.url}}{{site.indexpage}}">{{logopage.logohandle}}</a></td>
         <td>{{logopage.title}}</td>
         <td>{% if logopage.tags %}{{ logopage.tags | sort | join: ', '  }}{% endif %}</td>
     </tr>
-    {% endif %}
-    {% endfor %}
+    {%- endif -%}
+    {%- endfor -%}
     </tbody>
 </table>
 
