--- a/www/report/metadata.html
+++ b/www/report/metadata.html
@@ -8,7 +8,7 @@ redirect_from: /logos/metadata.html
 
 {% assign sorted_pages = site.pages | sort:'sort' %}
 {% capture checkon %}<i class="fa fa-check"></i>{% endcapture %}
-{% capture checkoff %}<i class="fa fa-fw"></i>{% endcapture %}
+{% capture checkoff %}<i class="fal fa-times"></i>{% endcapture %}
 {% assign logocount = 0 %}
 {% assign blogcount = 0 %}
 {% assign colorcount = 0 %}
@@ -31,75 +31,45 @@ redirect_from: /logos/metadata.html
     <thead>
         <tr>
             <th>Name</th>
-            <th style="text-align:center">Blog</th>
             <th style="text-align:center">Color</th>
-            <th style="text-align:center">Facebook</th>
             <th style="text-align:center">Font</th>
-            <th style="text-align:center">Github</th>
             <th style="text-align:center">Guidelines</th>
-            <th style="text-align:center">Google+</th>
-            <th style="text-align:center">Instagram</th>
-            <th style="text-align:center">LinkedIn</th>
-            <th style="text-align:center">Pinterest</th>
-            <th style="text-align:center">Reddit</th>
-            <th style="text-align:center">Tumblr</th>
-            <th style="text-align:center">Twitter</th>
             <th style="text-align:center">Website</th>
             <th style="text-align:center">Wikipedia</th>
-            <th style="text-align:center">YouTube</th>
-            <th style="text-align:center">Tags</th>
+            <th>Social media</th>
+            <th style="text-align:center"># Tags</th>
         </tr>
     </thead>
     <tbody>{% for logopage in sorted_pages %}{% if logopage.logohandle %}{% assign logocount = logocount | plus:1 %}{% assign count = logopage.images.size %}
         <tr>
             <td><a href="{{logopage.url}}{{site.indexpage}}">{{logopage.title}}</a></td>
             <td class="text-center">
-                {% if logopage.blog %}<a href="{{logopage.blog}}">{{ checkon }}{% assign blogcount = blogcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
                 {% if logopage.colors %}{{ checkon }}{% assign colorcount = colorcount | plus:1 %}{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                {% if logopage.facebook %}<a rel="nofollow" href="{{logopage.facebook}}">{{ checkon }}{% assign facebookcount = facebookcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
             </td>
             <td class="text-center">
                 {% if logopage.font %}{{ checkon }}{% assign fontcount = fontcount | plus:1 %}{% else %}{{ checkoff }}{% endif %}
             </td>
             <td class="text-center">
-                {% if logopage.github %}<a href="https://www.github.com/{{logopage.github}}">{{ checkon }}{% assign githubcount = githubcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.guide %}<a href="{{logopage.guide}}">{{ checkon }}{% assign guidecount = guidecount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
             </td>
             <td class="text-center">
-                {% if logopage.guide %}<a rel="nofollow" href="{{logopage.guide}}">{{ checkon }}{% assign guidecount = guidecount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.website %}<a href="{{logopage.website}}">{{ checkon }}{% assign websitecount = websitecount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
             </td>
             <td class="text-center">
-                {% if logopage.googleplus %}<a href="https://plus.google.com/+{{logopage.googleplus}}">{{ checkon }}{% assign googlepluscount = googlepluscount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.wikipedia %}<a href="{{logopage.wikipedia}}">{{ checkon }}{% assign wikipediacount = wikipediacount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
             </td>
-            <td class="text-center">
-                {% if logopage.instagram %}<a rel="nofollow" href="https://www.instagram.com/{{logopage.instagram}}/">{{ checkon }}{% assign instagramcount = instagramcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                {% if logopage.linkedin %}<a rel="nofollow" href="{{logopage.linkedin}}">{{ checkon }}{% assign linkedincount = linkedincount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                {% if logopage.pinterest %}<a rel="nofollow" href="https://www.pinterest.com/{{logopage.pinterest}}/">{{ checkon }}{% assign pinterestcount = pinterestcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                {% if logopage.reddit %}<a rel="nofollow" href="{{logopage.reddit}}">{{ checkon }}{% assign redditcount = redditcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                {% if logopage.tumblr %}<a rel="nofollow" href="{{logopage.tumblr}}">{{ checkon }}{% assign tumblrcount = tumblrcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                    {% if logopage.twitter %}<a rel="nofollow" href="https://www.twitter.com/{{logopage.twitter}}">{{ checkon }}{% assign twittercount = twittercount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                    {% if logopage.website %}<a href="{{logopage.website}}">{{ checkon }}{% assign websitecount = websitecount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                    {% if logopage.wikipedia %}<a href="{{logopage.wikipedia}}">{{ checkon }}{% assign wikipediacount = wikipediacount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-            </td>
-            <td class="text-center">
-                {% if logopage.youtube %}<a href="{{logopage.youtube}}">{{ checkon }}{% assign youtubecount = youtubecount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+            <td>
+                {% if logopage.blog %}<a href="{{logopage.blog}}"><i class="fas fa-rss-square"></i>{% assign blogcount = blogcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.facebook %}<a rel="nofollow" href="{{logopage.facebook}}"><i class="fab fa-facebook"></i>{% assign facebookcount = facebookcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.github %}<a href="https://www.github.com/{{logopage.github}}"><i class="fab fa-github"></i>{% assign githubcount = githubcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.googleplus %}<a rel="nofollow" href="https://plus.google.com/+{{logopage.googleplus}}"><i class="fab fa-google-plus-square "></i>{% assign googlepluscount = googlepluscount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.instagram %}<a rel="nofollow" href="https://www.instagram.com/{{logopage.instagram}}/"><i class="fab fa-instagram"></i>{% assign instagramcount = instagramcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.linkedin %}<a rel="nofollow" href="{{logopage.linkedin}}"><i class="fab fa-linkedin"></i>{% assign linkedincount = linkedincount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.pinterest %}<a rel="nofollow" href="https://www.pinterest.com/{{logopage.pinterest}}/"><i class="fab fa-pinterest"></i>{% assign pinterestcount = pinterestcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.reddit %}<a rel="nofollow" href="{{logopage.reddit}}"><i class="fab fa-reddit"></i>{% assign redditcount = redditcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.tumblr %}<a rel="nofollow" href="{{logopage.tumblr}}"><i class="fab fa-tumblr"></i>{% assign tumblrcount = tumblrcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.twitter %}<a rel="nofollow" href="https://www.twitter.com/{{logopage.twitter}}"><i class="fab fa-twitter"></i>{% assign twittercount = twittercount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+                {% if logopage.youtube %}<a rel="nofollow" href="{{logopage.youtube}}"><i class="fab fa-youtube"></i>{% assign youtubecount = youtubecount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
             </td>
             <td class="text-center">
                 <a href="{{logopage.url}}{{site.indexpage}}">{% if logopage.tags %}{{ logopage.tags | size }}{% assign tagcount = tagcount | plus:1 %}{% else %}0{% endif %}</a>
@@ -110,45 +80,92 @@ redirect_from: /logos/metadata.html
     <tfoot>
         <tr>
             <td>&nbsp;</td>
-            <td class="text-center">{{blogcount}} ({{ blogcount | times:100 | divided_by: logocount}}%)</td>
             <td class="text-center">{{colorcount}} ({{ colorcount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{facebookcount}} ({{ facebookcount | times:100 | divided_by: logocount}}%)</td>
             <td class="text-center">{{fontcount}} ({{ fontcount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{githubcount}} ({{ githubcount | times:100 | divided_by: logocount}}%)</td>
             <td class="text-center">{{guidecount}} ({{ guidecount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{googlepluscount}} ({{ googlepluscount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{instagramcount}} ({{ instagramcount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{linkedincount}} ({{ linkedincount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{pinterestcount}} ({{ pinterestcount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{redditcount}} ({{ redditcount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{tumblrcount}} ({{ tumblrcount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{twittercount}} ({{ twittercount | times:100 | divided_by: logocount}}%)</td>
             <td class="text-center">{{websitecount}} ({{ websitecount | times:100 | divided_by: logocount}}%)</td>
             <td class="text-center">{{wikipediacount}} ({{ wikipediacount | times:100 | divided_by: logocount}}%)</td>
-            <td class="text-center">{{youtubecount}} ({{ youtubecount | times:100 | divided_by: logocount}}%)</td>
+            <td>&nbsp;</td>
             <td class="text-center">{{tagcount}} ({{ tagcount | times:100 | divided_by: logocount}}%)</td>
         </tr>
         <tr>
             <th>&nbsp;</th>
-            <th style="text-align:center">Blog</th>
             <th style="text-align:center">Color</th>
-            <th style="text-align:center">Facebook</th>
             <th style="text-align:center">Font</th>
-            <th style="text-align:center">Github</th>
             <th style="text-align:center">Guidelines</th>
-            <th style="text-align:center">Google+</th>
-            <th style="text-align:center">Instagram</th>
-            <th style="text-align:center">LinkedIn</th>
-            <th style="text-align:center">Pinterest</th>
-            <th style="text-align:center">Reddit</th>
-            <th style="text-align:center">Tumblr</th>
-            <th style="text-align:center">Twitter</th>
             <th style="text-align:center">Website</th>
             <th style="text-align:center">Wikipedia</th>
-            <th style="text-align:center">YouTube</th>
-            <th style="text-align:center">Tags</th>
+            <th>Social media</th>
+            <th style="text-align:center"># Tags</th>
         </tr>
     </tfoot>
 </table>
 
 <p>{{ logocount }} logos</p>
+
+<table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+        <th>Social media site</th>
+        <th class="text-center">Count</th>
+        <th class="text-center">Percent available</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>blog</td>
+        <td class="text-center">{{blogcount}}</td>
+        <td class="text-center">{{ blogcount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>facebook</td>
+        <td class="text-center">{{facebookcount}}</td>
+        <td class="text-center">{{ facebookcount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>github</td>
+        <td class="text-center">{{githubcount}}</td>
+        <td class="text-center">{{ githubcount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>googleplus</td>
+        <td class="text-center">{{googlepluscount}}</td>
+        <td class="text-center">{{ googlepluscount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>instagram</td>
+        <td class="text-center">{{instagramcount}}</td>
+        <td class="text-center">{{ instagramcount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>linkedin</td>
+        <td class="text-center">{{linkedincount}}</td>
+        <td class="text-center">{{ linkedincount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>pinterest</td>
+        <td class="text-center">{{pinterestcount}}</td>
+        <td class="text-center">{{ pinterestcount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>reddit</td>
+        <td class="text-center">{{redditcount}}</td>
+        <td class="text-center">{{ redditcount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>tumblr</td>
+        <td class="text-center">{{tumblrcount}}</td>
+        <td class="text-center">{{ tumblrcount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>twitter</td>
+        <td class="text-center">{{twittercount}}</td>
+        <td class="text-center">{{ twittercount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    <tr>
+        <td>youtube</td>
+        <td class="text-center">{{youtubecount}}</td>
+        <td class="text-center">{{ youtubecount | times:100 | divided_by: logocount}}%</td>
+    </tr>
+    </tbody>
+</table>
