minor tweak to metadata report

--- a/www/report/metadata.html
+++ b/www/report/metadata.html
@@ -8,7 +8,7 @@ redirect_from: /logos/metadata.html
 
 {% assign sorted_pages = site.pages | sort:'sort' %}
 {% capture checkon %}<i class="fa fa-check"></i>{% endcapture %}
-{% capture checkoff %}<i class="fal fa-times"></i>{% endcapture %}
+{% capture checkoff %}<i class="fal fa-times" style="opacity:0.1"></i>{% endcapture %}
 {% assign logocount = 0 %}
 {% assign blogcount = 0 %}
 {% assign colorcount = 0 %}
