--- a/www/report/icon-vs-favicon.html
+++ b/www/report/icon-vs-favicon.html
@@ -18,11 +18,11 @@ noindex: true
         <tbody>
         {%- for logopage in sorted_pages %}{% if logopage.logohandle %}
         {%- capture iconfile %}{{ logopage.logohandle }}{{ '-icon.svg' }}{% endcapture %}
-        {%- if logopage.images contains iconfile and logopage.website %}
+        {%- if logopage.images contains iconfile and site.data.favicons contains logopage.logohandle and site.data.favicons[logopage.logohandle] != '-' %}
             {% assign urlparts = logopage.website | split:"/" %}
         <tr>
             <td><img alt="icon of {{logopage.title}}" src="/logos/{{logopage.logohandle}}/{{iconfile}}" style="height: 64px; width: 64px;"/></td>
-            <td><a href="{{logopage.website}}"><img alt="favicon from {{urlparts[2]}}" src="{% if logopage.favicon %}{{logopage.favicon}}{% else %}{{urlparts[0]}}//{{urlparts[2]}}/favicon.ico{% endif %}" style="height: 64px; width: 64px;" /></a></td>
+            <td><a href="{{logopage.website}}"><img alt="favicon from {{urlparts[2]}}" src="{{site.data.favicons[logopage.logohandle]}}" style="height: 64px; width: 64px;" /></a></td>
             <td><a href="{{ logopage.url }}{{site.indexpage}}">{{logopage.title}}</a></td>
         </tr>
         {% endif %}{% endif %}{% endfor %}
