css tweak on metadata report

--- a/www/report/metadata.html
+++ b/www/report/metadata.html
@@ -103,7 +103,7 @@ redirect_from: /logos/metadata.html
 
 <p>{{ logocount }} logos</p>
 
-<table class="table table-striped table-bordered">
+<table class="table table-striped table-bordered" style="width:auto;">
     <thead>
     <tr>
         <th>Social media site</th>
