https for regexplanet link on home page

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@ redirect_from:
 ---
 
 <p>I needed consistently sized logos for some of
-    <a href="http://www.regexplanet.com/">my</a>
+    <a href="https://www.regexplanet.com/">my</a>
     <a href="https://simpleshare.io/">recent</a>
     <a href="https://www.heatmap.tv/support/credits.html">projects</a>.
 I wanted images that were:</p>
