--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -44,4 +44,4 @@ redirect_from: /logos/missing.html
     </tbody>
 </table>
 
-<p>{{ logocount }} logos with something missing</p>
+<p>{{ logocount | intcomma }} logos with something missing</p>
