--- a/www/report/tags.html
+++ b/www/report/tags.html
@@ -27,4 +27,4 @@ title: Tag Report
     </tbody>
 </table>
 
-<p>{{ notagcount }} logos without tags</p>
+<p>{{ notagcount | intcomma }} logos without tags</p>
