report page tweaks

--- a/www/report/index.html
+++ b/www/report/index.html
@@ -5,14 +5,21 @@ noindex: true
 redirect_from: /logos/links.html
 ---
 
+<h2>Logos</h2>
+
 <ul>
-    <li><a href="colors.html">Colors</a> - detailed color metadata report.</li>
-    <li><a href="fonts.html">Fonts</a> - detailed font metadata report.</li>
     <li><a href="inventory.html" rel="nofollow">Inventory</a> - list of every available logo.</li>
-    <li><a href="metadata.html" rel="nofollow">Metadata Report</a> - what links are available for each logo.</li>
     <li><a href="missing.html" rel="nofollow">Missing Logos</a> - list of logos that do not have both rectangle and icon sizes.</li>
     <li>Tags: <a href="/logos/tags.html">Logos by Tag</a>, <a href="tags.html">Report</a> - Unfortunately, the tags aren't well maintained.</li>
     <li><a style="font-weight: 900;" href="visual.html">Visual Inventory</a> - view <i>all</i> the logos at once (WARNING: a lot of images!).</li>
+</ul>
+
+<h2>Metadata</h2>
+
+<ul>
+    <li><a href="colors.html">Colors</a> - detailed color metadata report.</li>
+    <li><a href="fonts.html">Fonts</a> - detailed font metadata report.</li>
+    <li><a href="metadata.html" rel="nofollow">Metadata Report</a> - what links are available for each logo.</li>
 </ul>
 
 <h2>Comparisons</h2>
