more metadata reports

--- a/www/report/index.html
+++ b/www/report/index.html
@@ -17,9 +17,11 @@ redirect_from: /logos/links.html
 <h2>Metadata</h2>
 
 <ul>
-    <li><a href="colors.html">Colors</a> - detailed color metadata report.</li>
-    <li><a href="fonts.html">Fonts</a> - detailed font metadata report.</li>
+    <li><a href="colors.html">Colors</a> - detailed color report.</li>
+    <li><a href="fonts.html">Fonts</a> - detailed font report.</li>
     <li><a href="metadata.html" rel="nofollow">Metadata Report</a> - what links are available for each logo.</li>
+    <li><a href="most-social.html">Most social</a> - logos with the most social media links</li>
+    <li><a href="unknown-meta.html">Unknown metadata keys</a> - to help cleanup garbage entries in the metadata</li>
 </ul>
 
 <h2>Comparisons</h2>
@@ -28,6 +30,5 @@ redirect_from: /logos/links.html
     <li><a href="ar21-vs-card.html" rel="nofollow">ar21 vs card</a> - Make sure the raster versions (with rsvg) look the same as the vector.</li>
     <li><a href="icon-vs-favicon.html" rel="nofollow">icon vs favicon</a> - Compare icon vs favicon</li>
     <li><a href="icon-vs-tile.html" rel="nofollow">icon vs tile</a> - Compare the icons and tiles.</li>
-    <li><a href="tile-vs-supertiny.html" rel="nofollow">tile vs SuperTinyIcons</a> - Compare the tiles with icons from <a href="https://www.github.com/edent/SuperTinyIcons">edent/SuperTinyIcons</a>.</li>
-
+    <li><a href="tile-vs-supertiny.html" rel="nofollow">tile vs SuperTinyIcons</a> - Compare the tiles with images from <a href="https://www.github.com/edent/SuperTinyIcons">edent/SuperTinyIcons</a>.</li>
 </ul>
