--- a/www/report/index.html
+++ b/www/report/index.html
@@ -22,6 +22,7 @@ redirect_from: /logos/links.html
     <li><a href="metadata.html" rel="nofollow">Metadata Report</a> - what links are available for each logo.</li>
     <li><a href="most-social.html">Most social</a> - logos with the most social media links</li>
     <li><a href="unknown-meta.html">Unknown metadata keys</a> - to help cleanup garbage entries in the metadata</li>
+    <li><a href="notes.html">Notes</a></li>
 </ul>
 
 <h2>Comparisons</h2>
@@ -31,4 +32,5 @@ redirect_from: /logos/links.html
     <li><a href="icon-vs-favicon.html" rel="nofollow">icon vs favicon</a> - Compare icon vs favicon</li>
     <li><a href="icon-vs-tile.html" rel="nofollow">icon vs tile</a> - Compare the icons and tiles.</li>
     <li><a href="tile-vs-supertiny.html" rel="nofollow">tile vs SuperTinyIcons</a> - Compare the tiles with images from <a href="https://www.github.com/edent/SuperTinyIcons">edent/SuperTinyIcons</a>.</li>
+    <li><a href="icon-vs-svgporn.html" rel="nofollow">icon vs SVGPorn</a> - Compare the icons with images from <a href="https://www.svgporn.com/">SVGPorn</a>.</li>
 </ul>
