--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -18,6 +18,7 @@ redirect_from: /logos/missing.html
             <th>Rectangle</th>
             <th style="text-align:center;">Other</th>
             <th style="text-align:center;">Guidelines</th>
+            <th style="text-align:center;">SVGPorn</th>
         </tr>
     </thead>
     <tbody>
@@ -36,7 +37,16 @@ redirect_from: /logos/missing.html
             <td>{% unless logopage.images contains logoicon %}MISSING{% endunless %}</td>
             <td>{% unless logopage.images contains logoar21 %}MISSING{% endunless %}</td>
             <td style="text-align:center;">{% if othercount > 0 %}{{othercount}}{% endif %}</td>
-            <td style="text-align:center;">{% if logopage.guide %}<a href="{{logopage.guide}}"><i class="fa fa-certificate"></i></a>{% endif %}</td>
+            <td style="text-align:center;">
+                {%- if logopage.guide %}<a href="{{logopage.guide}}"><i class="fa fa-certificate"></i></a>{% endif %}
+            </td>
+            <td style="text-align:center;">
+                {%- if site.data.svgporn contains logopage.logohandle %}
+                    {%- for img in site.data.svgporn[logopage.logohandle] %}
+                <a href="https://cdn.svgporn.com/logos/{{img}}"><img alt="svgporn for {{logopage.title}}" src="https://cdn.svgporn.com/logos/{{img}}" style="height:12pt; width:12pt" /></a>
+                    {%- endfor %}
+                {%- endif -%}
+            </td>
         </tr>
         {% endif %}
     {% endif %}
