--- a/www/search-github.html
+++ b/www/search-github.html
@@ -5,7 +5,7 @@ title: Search Github
 {% include searchtab.html %}
 <div class="row clearfix" style="padding-bottom:20px;">
     <div class="col-md-6 col-md-offset-3 column">
-        <img src="/images/spinner.svg" style="height:64px" id="wait"/>
+        <img alt="Loading..." src="/images/spinner.svg" style="height:64px" id="wait"/>
         <form action="get" class="form-inline" id="site_search" style="display:none;">
             <div class="form-group">
                  <label class="sr-only" for="q">Search query</label><input autocomplete="off" autofocus="autofocus" class="form-control" id="q" name="q" placeholder="Search terms" type="text">
