--- a/www/search-other.html
+++ b/www/search-other.html
@@ -13,7 +13,7 @@ title: Search Other Websites
     </div>
 </div>
 {% for alternative in site.data.alternatives %}{% if alternative.enabled %}
-<p><a class="altlink" data-search="{{alternative.search}}" href="{{alternative.url}}" rel="nofollow,noindex,noopener" target="_blank">{{alternative.name | default: alternative.id}}</a></p>
+<p><a class="altlink" data-search="{{alternative.search}}" href="{{alternative.url}}" rel="nofollow,noopener" target="_blank">{{alternative.name | default: alternative.id}}</a></p>
 {% endif %}{% endfor %}
 <script>
 $(function() {
