--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -6,8 +6,10 @@ redirect_from: /logos/missing.html
 ---
 <p>In theory, every logo should have at least the icon and rectangular versions.  This is the list of logos that don't have both.</p>
 
-{% assign sorted_pages = site.pages | sort:'sort' %}
-{% assign logocount = 0 %}
+{%- assign sorted_pages = site.pages | sort:'sort' %}
+{%- assign logocount = 0 %}
+{%- assign svgporncount = 0 %}
+{%- assign guidecount = 0 %}
 
 <table class="table table-striped table-bordered">
   	<thead>
@@ -38,10 +40,11 @@ redirect_from: /logos/missing.html
             <td>{% unless logopage.images contains logoar21 %}MISSING{% endunless %}</td>
             <td style="text-align:center;">{% if othercount > 0 %}{{othercount}}{% endif %}</td>
             <td style="text-align:center;">
-                {%- if logopage.guide %}<a href="{{logopage.guide}}"><i class="fa fa-certificate"></i></a>{% endif %}
+                {%- if logopage.guide %}{%- assign guidecount = guidecount | plus:1 %}<a href="{{logopage.guide}}"><i class="fa fa-certificate"></i></a>{% endif %}
             </td>
             <td style="text-align:center;">
                 {%- if site.data.svgporn contains logopage.logohandle %}
+                    {%- assign svgporncount = svgporncount | plus:1 %}
                     {%- for img in site.data.svgporn[logopage.logohandle] %}
                 <a href="https://cdn.svgporn.com/logos/{{img}}"><img alt="svgporn for {{logopage.title}}" src="https://cdn.svgporn.com/logos/{{img}}" style="height:12pt; width:12pt" /></a>
                     {%- endfor %}
@@ -52,6 +55,17 @@ redirect_from: /logos/missing.html
     {% endif %}
 {% endfor %}
     </tbody>
+    <tfoot>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>{{guidecount}}</td>
+            <td>{{svgporncount}}</td>
+        </tr>
+    </tfoot>
 </table>
 
 <p>{{ logocount | intcomma }} logos with something missing</p>
